feat(tmux): use windowizer to create new windows instead of sessions

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -122,4 +122,5 @@ bind B run 'panes=`tmux list-panes -s -F "##{pane_id}"`; \
 
 # thx primeagen
 # forget the find window.  That is for chumps
-bind-key -r f run-shell "tmux neww ~/.local/bin/tmux-sessionizer"
+# bind-key -r f run-shell "tmux neww ~/.local/bin/tmux-sessionizer"
+bind-key -r f run-shell "tmux neww ~/.local/bin/tmux-windowizer"
