--- a/ssh/.ssh/config
+++ b/ssh/.ssh/config
@@ -74,3 +74,13 @@ Host self-sn52-02
     User root
     IdentityFile ~/.ssh/id_ed25519_sk_nr_440-work
     PreferredAuthentications publickey
+
+Host dojo-testnet-miner01
+    User root
+    IdentityFile ~/.ssh/id_ed25519_sk_nr_440-work
+    PreferredAuthentications publickey
+
+Host dojo-subnet-tester4
+    User jarvis
+    IdentityFile ~/.ssh/id_ed25519_sk_nr_440-work
+    PreferredAuthentications publickey
