chore: dedicated terminal for tmux, change leader key

--- a/gpg/.gnupg/gpg-agent.conf
+++ b/gpg/.gnupg/gpg-agent.conf
@@ -7,3 +7,6 @@
 # allowing the gpg key's passphrase to be stored in the login
 # keychain, enabling automatic key signing.
 pinentry-program /usr/local/bin/pinentry-mac
+enable-ssh-support
+default-cache-ttl 600
+max-cache-ttl 3600
