--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -62,8 +62,10 @@ bind-key C-v paste-buffer
 
 # prefix key
 unbind C-b
+# NOTE: disabled this because we want fzf's easy file finder
 # set-option -g prefix C-t
-set-option -g prefix C-b
+# use <alt-t> as prefix so we can keep C-t for fzf
+set-option -g prefix M-t
 
 # Prefix+H/J/K/L to navigate splits vim-like navigation
 bind -r ^ last-window
@@ -124,3 +126,7 @@ bind B run 'panes=`tmux list-panes -s -F "##{pane_id}"`; \
 # forget the find window.  That is for chumps
 # bind-key -r f run-shell "tmux neww ~/.local/bin/tmux-sessionizer"
 bind-key -r f run-shell "tmux neww ~/.local/bin/tmux-windowizer"
+
+# NOTE: dedicated terminal instance
+bind-key -r t run-shell "tmux neww ~/.local/bin/tmux-windowizer TERM"
+
