--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -78,3 +78,8 @@
     smudge = git-lfs smudge -- %f
 [diff "lfs"]
     textconv = cat
+
+[url "https://github.com/"]
+	insteadOf = git@github.com:
+[url "git@github.com:"]
+	pushInsteadOf = https://github.com/
