chore: config fast git ssh, add tmux keybind

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -130,3 +130,6 @@ bind-key -r f run-shell "tmux neww ~/.local/bin/tmux-windowizer"
 # NOTE: dedicated terminal instance
 bind-key -r t run-shell "tmux neww ~/.local/bin/tmux-windowizer TERM"
 
+bind-key s if-shell '[[ $(tmux show-window-option -v synchronize-panes) == "on" ]]' \
+    'setw synchronize-panes off; display-message "Sync OFF"' \
+    'setw synchronize-panes on; display-message "Sync ON"'
