feat: neovim, tmux, ssh hardening, aerospace, sketchybar (#5)
* feat(tmux): split panes from cwd

* feat(shell): add gpgreset alias

* feat(zsh): add mini conda script to remove multiple envs

* refactor(git): cleanup git config

* fix(nvim): use proper variable, remove auto session

* feat(karabiner): update

* update vim

* refactor(zsh): cleanup

* refactor: rename to shared vars

* chore: update gitignore

* fix: use generic conda path

* refactor: cleanup bootstrap script

* fix(zsh): conda init script

* feat: add mac specific cmds

* fix: add missing brew commands

* feat(iterm): add iterm profile

* chore: update README

* fix(zsh): use proper z env var

* feat(zsh): fuzzy finder for z

* refactor: check for commands first before installing

* fix: use for loop instead

* feat: add config for gpg

* feat(zsh): add missing gpg-agent startup

* build: update shared vars

* feat: update iterm setup

* feat: add packages and vim

* chore: update aliases

* feat: add sketchybar simplem example

* feat: add sketchybar, commitizen, mac opts

* feat: add obsidian

* fix: remove iterm from stow targets

* chore: update karabiner

* chore: increase font size

* feat: use felix's sketchybar config

* feat: add tmux sessionizer

* fix: make fzf work for non git dir

* refactor: remove ctrl-T for tmux

* fix: add checks before sourcing

* feat: add deps for sketchybar

* feat(mac): add commands to customize defaults

- customize menu bar padding
- disable .DS_Store
- remove recents from dock
- autohide dock

* chore: disable base env

* feat(ssh): add ssh autocompletions

* feat(zsh): re-enable ctrl t

* feat(ssh): add ssh config

* feat(zsh): enable showing conda env name with direnv

* fix(zsh,gpg): remove deprecated options

* feat(ssh): strip ip addresses from ssh config

* fix(zsh): use node 18

* refactor(tmux): fix theme for default terminal

* feat: add more directories to sessionizer

* feat(vim): disable colorschemes

* fix(tmux): sessionizer "no client found" 

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
+.zsh_history
+.gnupg/
+!.gnupg/gpg-agent.conf
+!.gnupg/gpg.conf
+ohmyzsh/
 .vscode
 .swp
 *.zcompdump*
@@ -5,3 +10,6 @@
 .env
 .DS_Store
 */karabiner/automatic_backups/*
+automatic_backups/
+.zcompcache/
+
