--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,18 +1,32 @@
+set-option -g detach-on-destroy off
+
 # emacs
-set -g mode-keys emacs
-set -g status-keys emacs
+# set -g mode-keys emacs
+# set -g status-keys emacs
 
 # enable true color
 set -g default-terminal "xterm-256color"
-set -ga terminal-overrides ",xterm-256color:RGB"
+# set -ga terminal-overrides ",xterm-256color:RGB"
+set-option -ga terminal-overrides ",xterm-256color:Tc"
+# set-option -g default-terminal "screen-256color"
 
 # status bar
-set -g status-style bg=default # transparent
-set -g status-style "bg=#424949 fg=#FFFFFF"
-set -g status-left "#[bg=#515a5a] #S "
-set -g window-status-current-format "#[bg=#f39c12 fg=#424949] #I  #W "
-set -g window-status-format " #I  #W "
-set -g status-right "#[bg=#515a5a] %Y-%m-%d %H:%M #[bg=#7f8c8d] #{=4:pane_title} "
+# set -g status-style bg=default # transparent
+# set -g status-style "bg=#424949 fg=#FFFFFF"
+# set -g status-left "#[bg=#515a5a] #S "
+# set -g window-status-current-format "#[bg=#f39c12 fg=#424949] #I  #W "
+# set -g window-status-format " #I  #W "
+# set -g status-right "#[bg=#515a5a] %Y-%m-%d %H:%M #[bg=#7f8c8d] #{=6:pane_title} "
+# # geohotz
+set -g status-position bottom
+set -g status-bg colour0
+set -g status-fg colour255
+set -g status-left ''
+set -g status-right '#[fg=colour233,bg=colour241,bold] %d/%m #[fg=colour233,bg=colour245,bold] %H:%M:%S '
+set -g status-right-length 50
+set -g status-left-length 20
+setw -g window-status-current-format "#[reverse] #I:#W"
+
 
 # start panes from index 1, not 0
 set -g base-index 1
@@ -48,8 +62,10 @@ bind-key C-v paste-buffer
 
 # prefix key
 unbind C-b
+# NOTE: disabled this because we want fzf's easy file finder
 # set-option -g prefix C-t
-set-option -g prefix C-q
+# use <alt-t> as prefix so we can keep C-t for fzf
+set-option -g prefix M-t
 
 # Prefix+H/J/K/L to navigate splits vim-like navigation
 bind -r ^ last-window
@@ -91,8 +107,29 @@ set-option -g automatic-rename on
 set-option -g automatic-rename-format '#{pane_current_command}'
 
 # List of plugins
-set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'tmux-plugins/tmux-resurrect'
+# set -g @plugin 'tmux-plugins/tpm'
+# set -g @plugin 'tmux-plugins/tmux-resurrect'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
-run '~/.tmux/plugins/tpm/tpm'
+# run '~/.tmux/plugins/tpm/tpm'
+# Open panes in current directory
+bind '"' split-window -v -c "#{pane_current_path}"
+bind % split-window -h -c "#{pane_current_path}"
+
+# send "source ~/.zshrc<Enter>" to all panes in *current* session
+bind B run 'panes=`tmux list-panes -s -F "##{pane_id}"`; \
+              for pane in $panes; do \
+                tmux send -t $pane "source $XDG_CONFIG_HOME/zsh/.zshrc" Enter; \
+              done'
+
+# thx primeagen
+# forget the find window.  That is for chumps
+# bind-key -r f run-shell "tmux neww ~/.local/bin/tmux-sessionizer"
+bind-key -r f run-shell "tmux neww ~/.local/bin/tmux-windowizer"
+
+# NOTE: dedicated terminal instance
+bind-key -r t run-shell "tmux neww ~/.local/bin/tmux-windowizer TERM"
+
+bind-key s if-shell '[[ $(tmux show-window-option -v synchronize-panes) == "on" ]]' \
+    'setw synchronize-panes off; display-message "Sync OFF"' \
+    'setw synchronize-panes on; display-message "Sync ON"'
