chore: add ssh config

--- a/ssh/.ssh/config
+++ b/ssh/.ssh/config
@@ -84,3 +84,13 @@ Host dojo-subnet-tester4
     User jarvis
     IdentityFile ~/.ssh/id_ed25519_sk_nr_440-work
     PreferredAuthentications publickey
+
+Host self-sn98-01
+    User root
+    IdentityFile ~/.ssh/id_ed25519_sk_nr_440-work
+    PreferredAuthentications publickey
+
+Host self-sn98-02
+    User root
+    IdentityFile ~/.ssh/id_ed25519_sk_nr_440-work
+    PreferredAuthentications publickey
