--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -26,7 +26,7 @@
     hist = log --pretty=format:\"%Cgreen%h %Creset%cd %Cblue[%cn] %Creset%s%C(yellow)%d%C(reset)\" --graph --date=relative --decorate --all
     # git log including which files have been changed
     llog = log --graph --name-status --pretty=format:\"%C(red)%h %C(reset)(%cd) %C(green)%an %Creset%s %C(yellow)%d%Creset\" --date=relative
-    open = "!git config --get remote.origin.url | sed -Ee 's#(git@|git://)#https://#' -e 's#com:#com/#' -e 's#dev:#dev/#' | xargs open -a 'Firefox'"
+    open = "!git config --get remote.origin.url | sed -Ee 's#(git@|git://)#https://#' -e 's#com:#com/#' -e 's#dev:#dev/#' | xargs open -a 'Brave Browser'"
     rt = reset
     rb = rebase
     rl = reflog --pretty=reflog
