--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -65,7 +65,8 @@ unbind C-b
 # NOTE: disabled this because we want fzf's easy file finder
 # set-option -g prefix C-t
 # use <alt-t> as prefix so we can keep C-t for fzf
-set-option -g prefix M-t
+# use Option-Q instead so Option-T doesn't clash with claude
+set-option -g prefix M-q
 
 # Prefix+H/J/K/L to navigate splits vim-like navigation
 bind -r ^ last-window
